k8s/templates/perf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-perf
  namespace: perf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      containers:
      - name: voting-app
        image: mesivayenduri/voting-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "10m"
            memory: "256Mi"
          limits:
            cpu: "100m"
            memory: "512Mi"
