k8s/templates/perf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-perf
  namespace: perf
spec:
  selector:
    app: voting-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
