k8s/templates/perf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-perf-ingress
  namespace: perf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: voting-perf.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-perf
            port:
              number: 8080
